# dask-polars

./: .flake8  .gitignore  LICENSE  Makefile  README.md  build.requirements.txt  pyproject.toml  setup.py
.github/workflows/: fmt-test-lint.yaml
dask_polars/: __init__.py  core.py
dask_polars/tests/: test_core.py
